--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.9.1",
     "react": "^18.2.0",
